# air-carriers-international-market-etl

./: README.md  main.py  pyproject.toml
air-carriers-international-market-etl/: README.md  pyproject.toml
air-carriers-international-market-etl/.viz/: stats.json
air-carriers-international-market-etl/conf/base/: catalog.yml
air-carriers-international-market-etl/data/02_intermediate/: preprocessed_companies.parquet  preprocessed_shuttles.parquet
air-carriers-international-market-etl/data/03_primary/: model_input_table.parquet
air-carriers-international-market-etl/src/air_carriers_international_market_etl/pipelines/data_processing/: nodes.py  pipeline.py
